--- a/src/index.css
+++ b/src/index.css
@@ -163,19 +163,24 @@ xmp {
 
 .mui-btn {
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));
-  background: linear-gradient(-45deg, #103687, #2d79bb);
+  background: linear-gradient(-45deg, #1a48ac, #4796db);
 }
 
 #settingsModal {
   width: 70%;
-  height: 400px;
+  height: 70%;
   margin: 100px auto;
   background: linear-gradient(-45deg, #565fc7, #92dbff);
   padding: 10px 10px 10px 10px;
   box-shadow: 2px 2px 8px #000000;
+  font-size: small;
 }
 
 .settingsInput {
   font-size: large;
   width: 100%;
+}
+
+.px {
+  padding-right: 8px;
 }
