prep post view modal

--- a/src/index.css
+++ b/src/index.css
@@ -184,3 +184,12 @@ xmp {
 .px {
   padding-right: 8px;
 }
+
+#postViewModal {
+  width: 90%;
+  height: 90%;
+  margin: 100px auto;
+  padding: 10px 10px 10px 10px;
+  box-shadow: 2px 2px 8px black;
+  font-size: small;
+}
